# Orderbooks

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.yaml  .pre-commit-config.yaml  .zizmor.yml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SUPPORT.md  _typos.toml  cliff.toml  commitlint.config.cjs  pyproject.toml  vcpkg-configuration.json  vcpkg.json
.github/: labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: auto-assign.yml  bench.yml  changelog.yml  ci.yml  cmake.yml  codeql.yml  commitlint.yml  dependency-review.yml  first-interaction.yml  labels-sync.yml  lock-threads.yml  pr-labeler.yml  pr-size.yml  release-drafter.yml  release.yml  scorecard.yml  security.yml  stale.yml  tooling.yml  trivy.yml  zizmor.yml
apps/gateway/: CMakeLists.txt  main.cpp
apps/loadgen/: CMakeLists.txt  main.cpp
apps/profile/: CMakeLists.txt  main.cpp
apps/replay/: CMakeLists.txt  main.cpp
bench/: .clang-tidy  CMakeLists.txt  bench_arena.cpp  bench_bitmap.cpp  bench_engine.cpp  bench_engine_latency.cpp  bench_fix_parser.cpp  bench_latency_histogram.cpp  bench_smoke.cpp  bench_spsc.cpp
cmake/: CompilerFlags.cmake  CompilerWarnings.cmake  Dependencies.cmake  Hardening.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
docs/adr/: 0000-record-architecture-decisions.md  0001-cpp20-baseline.md  0002-cmake-vcpkg-manifest-mode.md  0003-linux-x86-64-primary-macos-dev.md  0004-dense-tick-ladder-book.md  0005-hierarchical-bitmap-best-price.md  0006-slab-arena-intrusive-fifo.md  0007-unordered-dense-id-index.md  0008-single-thread-engine-spsc-boundary.md  0009-crtp-publisher-no-virtual-hot-path.md  0010-conventional-commits-git-cliff-changelog.md  0011-tif-coverage-gtc-ioc-fok.md  0012-self-cross-policy-configurable.md  0013-account-aware-self-cross.md  0014-snapshot-wire-format.md  0015-multi-symbol-shard-router.md  0016-numa-first-touch-arena.md  0017-soa-open-addressed-id-index.md  0018-zero-copy-fix-order-entry-parser.md  0019-threaded-shard-runtime-core-pinned-workers.md  0020-per-shard-egress-rings.md  0021-merging-egress-consumer.md  0022-publisher-seam-for-merged-egress.md  0023-hugepage-backed-arena.md  0024-hdr-latency-histogram.md  0025-match-sweep-prefetch.md  0026-absolute-latency-ceiling-gate.md  0027-match-sweep-prefetch-reverted.md  0028-in-place-modify-relink.md  0029-guard-top-recompute.md  0030-end-to-end-load-harness.md  0031-binary-order-entry-gateway.md  0032-batch-worker-processed-counter.md  0033-aos-id-index-layout.md  0034-engine-cache-floor.md  README.md  template.md
docs/dev/: bench.md  build.md  gateway.md  loadgen.md  profiling.md  signing-setup.md  threading.md  viz.md
include/lob/: affinity.hpp  arena.hpp  bitmap.hpp  book.hpp  concepts.hpp  config.hpp  egress_merger.hpp  engine.hpp  fix_parser.hpp  hash.hpp  hugepage.hpp  id_index.hpp  json_recorder.hpp  latency_histogram.hpp  level.hpp  messages.hpp  order.hpp  publisher_sink.hpp  ring_publisher.hpp  shard_egress_runtime.hpp  shard_router.hpp  shard_runtime.hpp  shard_worker.hpp  snapshot.hpp  spin.hpp  spsc_ring.hpp  types.hpp  version.hpp
scripts/: adr-new.sh  bootstrap.sh  check_bench_regression.py  check_latency_ceiling.py  format.sh  lint.sh  perfstat.sh  profile.sh
scripts/orderbooks_viz/: __init__.py  bitmap_occupancy.py  dashboard.py  depth.py  event_log.py  flow_heatmap.py  latency.py  replay_anim.py  top_series.py
src/lob/: CMakeLists.txt  version.cpp.in
tests/: CMakeLists.txt  recording_publisher.hpp  reference_engine.hpp  test_affinity.cpp  test_arena.cpp  test_bitmap.cpp  test_book.cpp  test_egress_merger.cpp  test_engine.cpp  test_engine_differential.cpp  test_engine_invariants.cpp  test_engine_snapshot.cpp  test_engine_stress.cpp  test_fix_parser.cpp  test_hugepage.cpp  test_id_index.cpp  test_json_recorder.cpp  test_latency_histogram.cpp  test_level.cpp  test_messages.cpp  test_order.cpp  test_publisher_sink.cpp  test_shard_egress_runtime.cpp  test_shard_router.cpp  test_shard_runtime.cpp  test_spsc.cpp  test_types.cpp  test_version.cpp
tests/harness/: test_check_latency_ceiling.py  test_viz_smoke.py
