[project]
name = "orderbooks-harness"
version = "0.0.0"
description = "Repository tooling and analysis harness for the Orderbooks C++ matching engine."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Zac Kienzle", email = "zac.kienzle@gmail.com" }]
keywords = [
  "limit-order-book",
  "matching-engine",
  "high-frequency-trading",
  "low-latency",
  "harness",
  "tooling",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Testing",
]

dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "matplotlib>=3.9",
  "pyarrow>=17.0",
]

[dependency-groups]
dev = [
  "pre-commit>=3.7",
  "ruff>=0.6",
  "pyright>=1.1.380",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.6",
  "hypothesis>=6.112",
  "cmake-format>=0.6.13",
  "streamlit>=1.38",
]

[project.urls]
Repository = "https://github.com/ZacKienzle2/Orderbooks"
Issues = "https://github.com/ZacKienzle2/Orderbooks/issues"
Changelog = "https://github.com/ZacKienzle2/Orderbooks/blob/main/CHANGELOG.md"

[tool.uv]
package = false
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["build", "build-*", "vcpkg_installed", ".venv", "data"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
  "RUF",
  "PL",
  "PERF",
  "PIE",
  "PT",
  "RET",
  "TID",
  "TRY",
]
ignore = ["PLR0913", "PLR2004", "TRY003"]

[tool.ruff.format]
preview = true

[tool.pyright]
include = ["scripts", "tests/harness"]
exclude = ["**/.venv", "**/build", "**/build-*", "**/vcpkg_installed"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests/harness"]
addopts = "-ra --strict-markers --strict-config"
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["scripts", "tests/harness"]
